front: fix codeProject language img alignment

--- a/src/styles/codeFrame.module.scss
+++ b/src/styles/codeFrame.module.scss
@@ -17,7 +17,8 @@
 
 .languages>img {
     margin-left: 8px;
-    height: 2em;
+    height: 1.5em;
+    vertical-align: bottom;
 }
 
 .languages>h3 {
